<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
    schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">
  <name>hector_mapping</name>
  <version>0.5.2</version>
  <description> hector_mapping is a SLAM approach that can be used without odometry as well as on
    platforms that exhibit roll/pitch motion (of the sensor, the platform or both). It leverages the
    high update rate of modern LIDAR systems like the Hokuyo UTM-30LX and provides 2D pose estimates
    at scan rate of the sensors (40Hz for the UTM-30LX). While the system does not provide explicit
    loop closing ability, it is sufficiently accurate for many real world scenarios. The system has
    successfully been used on Unmanned Ground Robots, Unmanned Surface Vehicles, Handheld Mapping
    Devices and logged data from quadrotor UAVs. </description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="meyer@fsr.tu-darmstadt.de">Johannes Meyer</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <url type="website">http://ros.org/wiki/hector_mapping</url>


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <author email="kohlbrecher@sim.tu-darmstadt.de">Stefan Kohlbrecher</author>


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>laser_geometry</depend>
  <depend>message_filters</depend>
  <depend>message_generation</depend>
  <depend>nav_msgs</depend>
  <depend>rosbag_storage</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>